fix alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,8 @@ color: var(--highlight-color);
     width: 80%;
     border-left: 5px solid var(--highlight-color);
     padding-left: 20px;
-    padding-right: 20px;    
+    padding-right: 60px;    
+    text-align: justify;
   }
 
   
@@ -158,7 +159,7 @@ color: var(--highlight-color);
 /* settings for the maint portfolio */
   .portfolio-main{
     margin-left: 20px;
-    padding-right: 40px;
+    padding-right: 80px;
     width:100%;
     /* the main project full size */
   }
@@ -191,6 +192,7 @@ color: var(--highlight-color);
   .portfolio-small img{
     margin: 20px;
     border: 5px solid var(--border-color);
+    max-height: 335px;
   }
 
     /* when hover dim the photo */
@@ -200,15 +202,25 @@ color: var(--highlight-color);
 
   /* trying to position names and info on portfolios, box with border and text */
   .portfolio-name{
-    position: absolute;
-    top: -250px;
-    left: 20px;
+    position: absolute; 
     background-color: var(--main-header-text-color);
     border: 5px solid var(--border-color);
     padding: 10px;
     color: var(--background-light-color);
     font-weight: bold;
   }
+
+  /* positioning for portfolio-name in main */
+  .portfolio-main .portfolio-name{
+    top: -350px;
+  }
+
+    /* positioning for portfolio-name in small */
+  .portfolio-small .portfolio-name{
+    top: -225px;
+    left: 20px;
+  }
+
 
   /* set parameteres for the contact me section, min height, display style, margin right to space evenly as left margin on section already 20px */
   .contact-me{
